Attempt to build for tauri and for ghpages
Works in production, but doesn't work in development.
The vite mode seems to be getting overriden with "development"

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
 	"name": "mcctools.github.io",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "tauri dev",
-		"build": "tauri build",
+		"dev-tauri": "cross-env MY_MODE=tauri npm run tauri dev",
+		"build-tauri": "cross-env MY_MODE=tauri npm run tauri build",
+		"dev-ghpages": "cross-env MY_MODE=ghpages npm run svelte-kit dev",
+		"build-ghpages": "cross-env MY_MODE=ghpages npm run svelte-kit build",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
@@ -18,6 +20,7 @@
 		"@types/cookie": "^0.4.1",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
+		"cross-env": "^7.0.3",
 		"eslint": "^8.12.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
