--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,15 +73,13 @@ jobs:
       - name: Install app dependencies
         run: npm install
       
-      #- name: Get version
-      #  id: version
-      #  uses: martinbeentjes/npm-get-version-action@main
-      
       - name: Build the app
         id: tauri
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
           tagName: v__VERSION__ # tauri-action replaces \_\_VERSION\_\_ with the app version
           releaseName: 'v__VERSION__'
@@ -98,18 +96,88 @@ jobs:
     needs: build-tauri
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Get version
+        id: version
+        uses: martinbeentjes/npm-get-version-action@main
+      
+      - name: Read changelog
+        id: changelog
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./changelog.md
+
       - name: Get assets
         uses: actions/github-script@v6
         env:
           releaseId: ${{ needs.build-tauri.outputs.releaseId }}
+          version: ${{ steps.version.outputs.current-version }}
+          changelog: ${{ steps.changelog.outputs.content }}
         with:
           script: |
-            const { releaseId } = process.env;
+            const { releaseId, version, changelog } = process.env;
 
-            var response = await github.rest.repos.listReleaseAssets({
+            let response = await github.rest.repos.listReleaseAssets({
               owner: context.repo.owner,
               repo: context.repo.repo,
               release_id: releaseId,
             });
 
-            console.log(response);
+            let assets = response.data;
+
+            if (!assets || assets.length === 0)
+            {
+              core.setFailed("No assets available in response");
+              return;
+            }
+
+            let update = {
+              "name": version,
+              "notes": changelog,
+              "pub_date": assets[0].updated_at,
+              "platforms": {}
+            };
+
+            for (const asset of assets)
+            {
+              const name = asset.name;
+              if ((typeof name !== "string" && !(name instanceof String)) || name.endsWith(".sig"))
+              {
+                continue;
+              }
+
+              const sigName = asset.name + ".sig";
+              const sigAsset = assets.find(elem => elem.name == sigName);
+              if (!sigAsset)
+              {
+                continue;
+              }
+              const sig = await github.request(sig_asset.browser_download_url);
+
+              let platform = {
+                signature: sig
+                url: asset.browser_download_url
+              };
+
+              // TODO: Support more platforms
+              const targz = ".tar.gz";
+              if (asset.name.endsWith(targz))
+              {
+                if (asset.name.endsWith(".AppImage", asset.name.lenth - targz.length))
+                {
+                  update.platforms["linux-x86_64"] = platform;
+                }
+                else
+                {
+                  update.platforms["darwin-intel"] = platform
+                }
+              }
+              else if (asset.name.endsWith(".msi"))
+              {
+                update.platforms["windows-x86_64"] = platform;
+              }
+            }
+
+            core.info(update);
