Use a PAT for publishing the release so that workflows can be triggered

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,6 +99,6 @@ jobs:
       - name: Publish release
         uses: eregon/publish-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           release_id: ${{ needs.build-tauri.outputs.releaseId }}
