Log raw assets list
Temporarily disable generation of updater file

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -51,6 +51,9 @@ jobs:
               return;
             }
 
+            core.info(JSON.stringify(assets));
+            return;
+
             let update = {
               "name": version,
               "notes": changelog,
