--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,8 @@ jobs:
           toolchain: stable
       
       - uses: Swatinem/rust-cache@v1
+        with:
+          working-directory: "./src-tauri"
           
       - name: Install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-latest'
