--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
 	"version": "0.1.1",
 	"scripts": {
 		"dev-tauri": "cross-env MY_MODE=tauri npm run tauri dev",
-		"build-tauri": "cross-env MY_MODE=tauri npm run tauri build",
+		"build-tauri": "cross-env VITE_PROD=true MY_MODE=tauri npm run tauri build",
 		"dev": "cross-env MY_MODE=tauri npm run tauri dev",
-		"build": "cross-env MY_MODE=tauri npm run tauri build",
+		"build": "cross-env VITE_PROD=true MY_MODE=tauri npm run tauri build",
 		"dev-ghpages": "cross-env MY_MODE=ghpages npm run svelte-kit dev",
-		"build-ghpages": "cross-env MY_MODE=ghpages npm run svelte-kit build",
+		"build-ghpages": "cross-env VITE_PROD=true MY_MODE=ghpages npm run svelte-kit build",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
 		"format": "prettier --write --plugin-search-dir=. .",
 		"tauri": "tauri",
-		"svelte-kit": "svelte-kit"
+		"svelte-kit": "svelte-kit",
+		"preview": "svelte-kit preview"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.34",
@@ -36,7 +37,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/fira-mono": "^4.5.0",
 		"@tauri-apps/api": "^1.0.0-rc.6",
 		"cookie": "^0.4.1"
 	}
